简化angular 删除路由

--- a/view/nav.html
+++ b/view/nav.html
@@ -49,7 +49,7 @@
         <div class="fl calcTit">买房税费</div>
     </header>
 
-    <div class="calcbuy" id="calcbuy">
+    <div class="calcbuy overthrow" id="calcbuy">
         <form name="buyForm" class="buyForm">
             <!--合同价部分--borderbtrd-->
             <div class="calcline">
@@ -258,7 +258,7 @@
         <div class="fl calcTit">卖房税费</div>
     </div>
 
-    <div class="calcsell" id="calcsell">
+    <div class="calcsell overthrow" id="calcsell">
         <!--换算方式：-->
         <form name="sellForm" id="sellForm" class="sellForm">
             <div class="inputlinetype clearfix row caltype" id="caltype">
@@ -576,7 +576,7 @@
         <div class="fl calcTit">帮助中心</div>
     </header>
 
-    <div class="helpcon">
+    <div class="helpcon overthrow">
         <div class="helpm">
             <div class="helpall">
                 <div class="helptips">
