--- a/css/style.css
+++ b/css/style.css
@@ -470,7 +470,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    background: #000;
+/*    background: #000;*/
 }
 .mainbuy,.mainsell,.mainhelp,.buyresult,.sellresult{
     background: #354b62;
@@ -601,7 +601,7 @@
 
 .first{
     position: absolute;
-    z-ndex: 2;
+    z-index: 2;
     -webkit-border-radius:3px;
     background: #354b62;
 }
@@ -1218,7 +1218,7 @@ select{
     -webkit-transition-duration: 0.3s;
     -webkit-transition-timing-function: ease-in;
 }
-.conshow1{
+/*.conshow1{
     -webkit-transition-duration: 0.3s;
     -webkit-transform-origin: 50% 50%;
     -webkit-transition-timing-function: ease-in-out ;
@@ -1227,7 +1227,7 @@ select{
     -webkit-transition-duration: 0.3s;
     -webkit-transform-origin: 50% 50%;
     -webkit-transition-timing-function: ease-in-out ;
-}
+}*/
 .conhide{
     -webkit-transform: translateX(0px);
     -webkit-transition-duration: 0.3s;
