--- a/css/reset.css
+++ b/css/reset.css
@@ -33,6 +33,8 @@ caption{border-bottom:thin solid #363534;margin:0 8px;text-align:center}
 	-webkit-user-select: none; 
 	-webkit-highlight: none; 
 	-webkit-tap-highlight-color: rgba(0,0,0,0); 
+/*    -webkit-backface-visibility:hidden;*/
+/*    -webkit-transform-style : preserve-3d;    */
 }
 /*input{ -webkit-appearance:none}*/
 
